Fix spacing of directions on menu

--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -4,12 +4,34 @@
     border-radius: 10px;
     height: 50vh;
     width: 50vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.instructions {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10% 5% 0 5%;
+    height: 100%;
+}
+
+.instructions h1 {
+    font-size: 60px;
+}
+
+.instructions p {
+    font-size: 25px;
+    text-align: center;
 }
 
 .btn-container {
     display: flex;
     justify-content: space-evenly;
-    padding: 10%;
+    align-items: flex-end;
+    flex: 1;
+    padding: 5%;
 }
 
 .btn {
